feat: Add more translation

--- a/bmi/public/locales/en/translation.json
+++ b/bmi/public/locales/en/translation.json
@@ -1,4 +1,16 @@
 {
+  "TargetCalories": "Target Calories: ",
+  "calories" : "calories",
+  "EstimatedTDEE": "Estimated TDEE: ",
+  "nutritionalPlan": "Nutritional Plan",
+  "sedentary": "Sedentary",
+  "maintenance": "Maintenance",
+  "enterAllYourDetails": "Please enter all your details in the BMI Calculator section first.",
+  "InvalidUserData": "Invalid user data. Please check your inputs.",
+  "calculateNutritionalPlan": "Calculate Nutritional Plan",
+  "nutritionalPlanGenerator": "Nutritional Plan Generator",
+  "nutritionalPlanner": "Nutritional Planner",
+  "bmiCalculator": "BMI Calculator",
   "bmiHealthCalculator": "BMI Health Calculator",
   "weight": "Weight",
   "height": "Height",
@@ -35,7 +47,6 @@
   "increasedRiskHeartDisease": "Increased risk of developing heart disease",
   "higherRiskType2Diabetes": "Higher risk of type 2 diabetes",
   "highRiskHeartDiseaseStroke": "High risk of heart disease and stroke",
-  "highRiskType2Diabetes": "High risk of type 2 diabetes",
   "increasedRiskCertainCancers": "Increased risk of certain cancers",
   "riskEarlyOnsetDiabetes": "Risk of early onset diabetes",
   "higherRiskFrailtyFalls": "Higher risk of frailty and falls",
