--- a/bmi/public/locales/es/translation.json
+++ b/bmi/public/locales/es/translation.json
@@ -1,4 +1,16 @@
 {
+  "TargetCalories": "Calorías Objetivo: ",
+  "calories": "calories",
+  "EstimatedTDEE": "Estimated TDEE: ",
+  "nutritionalPlan": "Plan Nutricional",
+  "sedentary": "Sedentario",
+  "maintenance": "Mantenimiento",
+  "enterAllYourDetails": "Por favor, ingrese todos sus detalles en la sección de Calculadora del IMC primero.",
+  "InvalidUserData": "Datos de usuario inválidos. Por favor, revise sus entradas.",
+  "calculateNutritionalPlan": "Calcular Plan de Nutrición",
+  "nutritionalPlanGenerator": "Generador de Planes Nutricionales",
+  "nutritionalPlanner": "Planificador Nutricional",
+  "bmiCalculator": "Calculadora del IMC",
   "bmiHealthCalculator": "Calculadora de Salud IMC",
   "weight": "Peso",
   "height": "Altura",
