--- a/bmi/public/locales/pt/translation.json
+++ b/bmi/public/locales/pt/translation.json
@@ -1,4 +1,16 @@
 {
+  "TargetCalories": "Calorias Alvo: ",
+  "calories": "calorias",
+  "EstimatedTDEE": "TDEE Estimado: ",
+  "nutritionalPlan": "Plano Nutricional",
+  "sedentary": "Sedentário",
+  "maintenance": "Manutenção",
+  "enterAllYourDetails": "Por favor, insira todos os seus detalhes na seção de Calculadora de IMC primeiro.",
+  "InvalidUserData": "Dados de usuário inválidos. Por favor, verifique suas entradas.",
+  "calculateNutritionalPlan": "Calcular Plano Nutricional",
+  "nutritionalPlanGenerator": "Gerador de Planos Nutricionais",
+  "nutritionalPlanner": "Planejador Nutricional",
+    "bmiCalculator": "Calculadora de IMC",
   "bmiHealthCalculator": "Calculadora de Saúde IMC",
   "weight": "Peso",
   "height": "Altura",
