feat: Finished translations

--- a/bmi/public/locales/en/translation.json
+++ b/bmi/public/locales/en/translation.json
@@ -1,4 +1,20 @@
 {
+  "aboutNutricionText1": "Our Nutritional Plan Generator first estimates your Total Daily Energy Expenditure (TDEE) – the calories your body needs daily. For example, if your Estimated TDEE is 2066 calories, this becomes your Target Calories. The generator then breaks down these calories into recommended macronutrients: Protein (e.g., 140g), Fat (e.g., 57g), and Carbohydrates (e.g., 247g), to help you achieve your dietary goals.",
+  "aboutNutritionalPlan": "About Nutritional Plan",
+  "ExtraActive": "Extra Active (very hard exercise/physical job or training twice a day)",
+  "SelectYourActivityLevel": "Select Your Activity Level",
+  "VeryActive": "Very Active (hard exercise/sports 6-7 days/week)",
+  "ModeratelyActive": "Moderately Active (moderate exercise/sports 3-5 days/week)",
+  "LightlyActive": "Lightly Active (light exercise/sports 1-3 days/week)",
+  "Sedentary": "Sedentary (little to no exercise)",
+  "weightGain": "Weight Gain",
+  "weightLoss": "Weight Loss",
+  "selectYourGoal": "Select Your Goal",
+  "maintainWeight": "Maintain Weight",
+  "Carbohydrates": "Carbohydrates",
+  "Fat": "Fat",
+  "Protein": "Protein",
+  "Macronutrients": "Macronutrients",
   "TargetCalories": "Target Calories: ",
   "calories" : "calories",
   "EstimatedTDEE": "Estimated TDEE: ",
