--- a/bmi/public/locales/es/translation.json
+++ b/bmi/public/locales/es/translation.json
@@ -1,4 +1,20 @@
 {
+  "aboutNutricionText1": "Nuestro Generador de Planes Nutricionales calcula primero su Gasto Energético Diario Total (GEDT), es decir, las calorías que su cuerpo necesita diariamente. Por ejemplo, si su TDEE estimado es de 2.066 calorías, éste se convierte en su objetivo de calorías. A continuación, el generador desglosa estas calorías en macronutrientes recomendados: Proteínas (por ejemplo, 140 g), Grasas (por ejemplo, 57 g) y Carbohidratos (por ejemplo, 247 g), para ayudarle a alcanzar sus objetivos dietéticos.",
+  "aboutNutritionalPlan": "Acerca del Plan Nutricional",
+  "ExtraActive": "Extra Activo (ejercicio muy intenso/trabajo físico o entrenamiento dos veces al día)",
+  "SelectYourActivityLevel": "Seleccione su Nivel de Actividad",
+  "VeryActive": "Muy Activo (ejercicio/deportes intenso 6-7 días/semana)",
+  "ModeratelyActive": "Moderadamente Activo (ejercicio/deportes moderado 3-5 días/semana)",
+  "LightlyActive": "Ligeramente Activo (ejercicio/deportes ligero 1-3 días/semana)",
+  "Sedentary": "Sedentario (poco o ningún ejercicio)",
+  "weightGain": "Aumento de Peso",
+  "weightLoss": "Pérdida de Peso",
+  "selectYourGoal": "Seleccione su objetivo",
+  "maintainWeight": "Mantener Peso",
+  "Carbohydrates": "Carbohidratos",
+  "Fat": "Grasa",
+  "Protein": "Proteína",
+  "Macronutrients": "Macronutrientes",
   "TargetCalories": "Calorías Objetivo: ",
   "calories": "calories",
   "EstimatedTDEE": "Estimated TDEE: ",
