--- a/bmi/public/locales/pt/translation.json
+++ b/bmi/public/locales/pt/translation.json
@@ -1,4 +1,19 @@
 {
+  "aboutNutricionText1": "Nosso Gerador de Planos Nutricionais primeiro estima seu Gasto Energético Diário Total (TDEE) - as calorias que seu corpo precisa diariamente. Por exemplo, se seu TDEE estimado for de 2.066 calorias, esse valor se tornará sua meta de calorias. Em seguida, o gerador divide essas calorias em macronutrientes recomendados: Proteína (por exemplo, 140g), Gordura (por exemplo, 57g) e Carboidratos (por exemplo, 247g), para ajudá-lo a atingir suas metas dietéticas.",
+  "aboutNutritionalPlan": "Sobre o Plano Nutricional",
+  "SelectYourActivityLevel": "Selecione Seu Nível de Atividade",
+  "VeryActive": "Muito Ativo (exercício intenso/esportes 6-7 dias/semana)",
+  "ModeratelyActive": "Moderadamente Ativo (exercício moderado/esportes 3-5 dias/semana)",
+  "LightlyActive": "Levemente Ativo (exercício leve/esportes 1-3 dias/semana)",
+  "Sedentary": "Sedentário (pouco ou nenhum exercício)",
+  "weightGain": "Ganho de Peso",
+  "weightLoss": "Perda de Peso",
+  "selectYourGoal": "Selecione Seu Objetivo",
+  "maintainWeight": "Manter Peso",
+  "Carbohydrates": "Carboidratos",
+  "Fat": "Gordura",
+  "Protein": "Proteína",
+  "Macronutrients": "Macronutrientes",
   "TargetCalories": "Calorias Alvo: ",
   "calories": "calorias",
   "EstimatedTDEE": "TDEE Estimado: ",
